@startuml
title Adapter Pattern - Hotels Ophalen
skinparam linetype ortho

    interface HotelApiAdapter {

       + fetchHotels(): String
    }

    class BookingApiAdapter {
       - bookingService : ExternalBookingService
       + fetchHotels(): String
    }

    class TripadvisorApiAdapter {
       - tripadvisorService : ExternalTripadvisorService
       + fetchHotels(): String
    }


    class ExternalBookingService <<External>> {
        + fetchBookingHotels(): String
    }

    class ExternalTripadvisorService <<External>> {
        + fetchTripadvisorHotels(): String
    }


    class HotelController {
       - hotelFactory : HotelFactory
       + getAvailableHotels(String hotelProvider): String
    }

    class HotelFactory {
       - bookingApiAdapter : BookingApiAdapter
       - tripadvisorApiAdapter : TripadvisorApiAdapter
       + getAdapter(String hotelProvider) : HotelApiAdapter
    }

HotelApiAdapter <|.. BookingApiAdapter
HotelApiAdapter <|.. TripadvisorApiAdapter

BookingApiAdapter --> ExternalBookingService : -bookingService
TripadvisorApiAdapter --> ExternalTripadvisorService : -tripadvisorService

HotelFactory --> BookingApiAdapter
HotelFactory --> TripadvisorApiAdapter
HotelController --> HotelFactory : -hotelFactory

@enduml